--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,3 +2,7 @@
 
 <h3><%= @task.title %></h3>
 <p><%= @task.details %></p>
+<%= link_to "Edit", edit_task_path(@task) %>
+<%= link_to "Back to list", tasks_path %>
+<%= link_to "Delete", task_path(@task), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+%>
