--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -5,7 +5,8 @@
   <%= f.label :details %>
   <%= f.text_field :details %>
 
-<% unless f.object.new_record? %>
+<% unless @task.new_record? %>
+<%# could also write above line as f.object.new_record? %>
   <%= f.label :completed %>
   <%= f.check_box :completed %>
 <% end  %>
