--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,7 +1,14 @@
 <h1>To-do List</h1>
 <ul>
 <% @tasks.each do |task| %>
-  <li><%= link_to task.title, task_path(task) %></li>
+  <li>
+    <% if task.completed? %>
+      <i class="fa-solid fa-square-check"></i>
+    <%else%>
+      <i class="fa-regular fa-square-check"></i>
+    <% end %>
+    <%= link_to task.title, task_path(task) %>
+  </li>
 <% end %>
 </ul>
 
