--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,2 +1,6 @@
-<%= render "form", task: @task %>
-<%= link_to "Back to tasks list", tasks_path %>
+<div class="main-container">
+  <h1>New Task</h1>
+
+  <%= render "form", task: @task %>
+  <%= link_to "Back to tasks list", tasks_path %>
+</div>
