--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -18,7 +18,7 @@
     </ul>
   </div>
   <div>
-    <p class="pt-3"><%= link_to "➕ Add a new task", new_task_path %></p>
+    <p class="pt-3"><%= link_to "➕ Add a new task", new_task_path, data: { turbolinks: false } %></p>
   </div>
 
 </div>
